# venture-launch-deployment

./: .dockerignore  .eslintrc.json  .gitignore  .prettierignore  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  init-letsencrypt.sh  package-lock.json  package.json
backend/: .eslintrc.json  .gitignore  README.md  (+9 more)
venture-launch-dao/: .Dockerfile.dev  .Dockerfile.prod  .gitignore  Cargo.toml  README.md
venture-launch-dao/contract_module/: instruction.rs  mod.rs  test.rs  venture_launch.rs
venture-launch-dao/contract_module/associated_token/: instruction.rs  mod.rs  native.rs  utils.rs
venture-launch-dao/rabbit_utils/: brokers.rs  mod.rs  publisher.rs  rabbit_handler.rs
venture-launch-dao/rabbit_utils/consumers/: base_consumer.rs  mod.rs
venture-launch-dao/rabbit_utils/consumers/use_cases/: create_user.rs
venture-launch-dao/src/: main.rs
venture-launch-dao/src/dao_module/repositories/: dao_repository.rs  mod.rs
venture-launch-dao/src/dao_module/services/: dao_service.rs
venture-launch-dao/src/domain/services/: dao_service.rs
venture-launch-dao/src/infrastructure/: mod.rs
venture-launch-dao/src/infrastructure/rabbitMQ_utils/: broker.rs  error.rs  mod.rs  rabbitMQ_consumer.rs  rabbitMQ_publisher.rs
venture-launch-dao/src/infrastructure/request_handler/: mod.rs
venture-launch-dao/src/multisig/controllers/: controller.rs
venture-launch-dao/src/multisig_utils/: base_multisig.rs  business_analyst_multisig_trait.rs  investor_multisig_trait.rs  mod.rs
venture-launch-dao/src/request_handler/: mod.rs  processor.rs
(+265 files in other folders)
