[package]
name = "venture-launch-dao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.18.16"
solana-sdk = "1.18.16"
squads-multisig = "2.0.1"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
chrono = "0.4.24"
solana-client = "1.18.16"
async-trait = "0.1.80"
amqprs = "1.6.2"
serde = { version = "1.0.203" }
amqp_serde = "0.4.1"
serde_json = "1.0.120"
ed25519-dalek = "1.0.1"
dotenv = "0.15.0"
spl-associated-token-account = "3.0.4"
spl-token = "4.0.0"
